--- a/src/shtExtructor.cls
+++ b/src/shtExtructor.cls
@@ -14,27 +14,30 @@ Sub cmdExtruct_Click()
     ' エラー処理の登録
     Dim errNumber As Integer
     On Error GoTo ErrorHandler
+    Dim textnumber As Integer
     
     ' OSの種類を出力
-    If Application.OperatingSystem Like "*Mac*" Then
-        Debug.Print (" OS: MacOS")
-    Else
-        Debug.Print (" OS: Windows")
-    End If
+    Debug.Print ("osName(): " & osName())
     
     ' ファイル拡張子が在ったら
     Dim filename As String
     filename = Me.Cells(2, 3).Value
     Dim ext_position As Long
     ext_position = InStrRev(filename, ".")
-    Debug.Print ("filename:" & filename & ":" & ext_position)
-    Dim textfile As String
     If Len(ext_position) > 0 Then
+        Debug.Print ("filename:" & filename & ":" & ext_position)
+
+        Dim directory As String
+        directory = Left(filename, ext_position - 1)
+        Dim errMessage As String
+        errMessage = osMakeDirectory(directory)
+        Debug.Print ("osMakeDirectory(" & directory & "):" & errMessage)
 
         ' 出力するテキストファイルが開けたら
-        textfile = Left(filename, ext_position) & "txt"
+        Dim textfile As String
+        textfile = osBuildPath(directory, "export.txt")
         Debug.Print ("textfile:" & textfile)
-        Dim textnumber As Integer
+
         textnumber = FreeFile()
         Open textfile For Output As #textnumber
         If errNumber <= 0 Then
@@ -44,11 +47,13 @@ Sub cmdExtruct_Click()
             Set in_book = Workbooks.Open(filename:=filename, ReadOnly:=True)
             If errNumber <= 0 Then
                 Me.Activate
+                Dim categories() As ShapeCategory
+                categories = ShapeCategoriesInitialize()
 
                 ' 全てのシートを抽出する
                 Dim osheet As Worksheet
                 For Each osheet In in_book.Sheets
-                    errNumber = ExtructSheet(textnumber, osheet)
+                    errNumber = ExtructSheet(textnumber, osheet, directory, categories)
                 Next osheet
 
                 ' Excelブックを閉じる
@@ -65,29 +70,37 @@ Sub cmdExtruct_Click()
     Exit Sub
 ErrorHandler:
     errNumber = Err.Number
-    Print #textnumber, "cmdExtruct_Click()  ERROR " & Err.Number & ":" & Err.Description
+    If textnumber > 0 Then
+        Print #textnumber, "cmdExtruct_Click()  ERROR " & Err.Number & ":" & Err.Description
+    Else
+        Debug.Print("cmdExtruct_Click()  ERROR " & Err.Number & ":" & Err.Description)
+    End If
     Resume Next
 End Sub
 
 ''' シートの抽出
-Function ExtructSheet(textnumber As Integer, sheet As Worksheet) As Integer
+Function ExtructSheet(textnumber As Integer, sheet As Worksheet, directory As String, ByRef categories() As ShapeCategory) As Integer
     Dim errNumber As Integer
     On Error GoTo ErrorHandler
     Print #textnumber, sheet.CodeName & ":" & sheet.Name
 
-    ' 全ての使用領域で
-    Dim nrow As Integer
-    For nrow = sheet.UsedRange.Row To sheet.UsedRange.Rows.Count
-        Dim ncol As Integer
-        For ncol = sheet.UsedRange.Column To sheet.UsedRange.Columns.Count
+    ' 使用領域が在ったら
+    If sheet.UsedRange.Rows.Count > 0 Then
 
-            ' セルを抽出
-            Dim ocell As range
-            Set ocell = sheet.Cells(nrow, ncol)
-            errNumber = ExtructCell(textnumber, ocell)
-            Set ocell = Nothing
-        Next ncol
-    Next nrow
+        ' 全ての使用領域で
+        Dim nrow As Integer
+        For nrow = sheet.UsedRange.Row To sheet.UsedRange.Rows.Count
+            Dim ncol As Integer
+            For ncol = sheet.UsedRange.Column To sheet.UsedRange.Columns.Count
+
+                ' セルを抽出
+                Dim ocell As range
+                Set ocell = sheet.Cells(nrow, ncol)
+                errNumber = ExtructCell(textnumber, ocell, categories)
+                Set ocell = Nothing
+            Next ncol
+        Next nrow
+    End If
     
     ' 図形が在ったら
     If sheet.Shapes.Count > 0 Then
@@ -95,13 +108,29 @@ Function ExtructSheet(textnumber As Integer, sheet As Worksheet) As Integer
         ' 全ての図形の抽出
         Dim oshape As Shape
         For Each oshape In sheet.Shapes
+            Dim category As ShapeCategory
+            category = ShapeCategoriesFind(categories, oshape.Type)
             Dim sshape As String
-            Dim stype As String
-            Dim sframe As String
             sshape = oshape.Parent.CodeName & "!" & Chr(&H22) & oshape.Name & Chr(&H22)
-            stype = ShapeType(oshape)
-            sframe = TextFrame(oshape.TextFrame)
-            Print #textnumber, sshape & " " & stype & " " & Chr(&H22) & sframe & Chr(&H22)
+            Dim salternative As String
+            If Len(oshape.AlternativeText) > 0 Then
+                salternative = ":" & Chr(&H22) & oshape.AlternativeText & Chr(&H22)
+            End If
+            Dim sframe As String
+            If category.hasText Then
+                sframe = " " & Chr(&H22) & TextFrame(oshape.TextFrame) & Chr(&H22)
+            End If
+            If category.hasImage Then
+                oshape.Copy
+                Dim imagefile As String
+                imagefile = osBuildPath(directory, oshape.Parent.CodeName & "!" & oshape.Name)
+                Dim errMessage As String
+                errMessage = osClipboardToImageFile(imagefile)
+                if Len(errMessage) > 0 Then
+                    Print #textnumber, sshape & " ERROR " & errMessage
+                End If
+            End If
+            Print #textnumber, sshape & " " & category.name & salternative & sframe
         Next oshape
     End If
     
@@ -115,7 +144,7 @@ ErrorHandler:
 End Function
 
 ''' セルの抽出
-Function ExtructCell(textnumber As Integer, ocell As range) As Integer
+Function ExtructCell(textnumber As Integer, ocell As range, categories() As ShapeCategory) As Integer
     Dim errNumber As Integer
     On Error GoTo ErrorHandler
 
@@ -135,10 +164,10 @@ Function ExtructCell(textnumber As Integer, ocell As range) As Integer
     Set ocomment = ocell.Comment
     If Not ocomment Is Nothing Then
         Dim sshape As String
-        Dim stype As String
         sshape = saddress & " " & Chr(&H22) & ocomment.Shape.Name & Chr(&H22)
-        stype = ShapeType(ocomment.Shape)
-        Print #textnumber, sshape & " " & stype & " " & ocomment.Author & ":" & Chr(&H22) & ocomment.Text & Chr(&H22)
+        Dim category As ShapeCategory
+        category = ShapeCategoriesFind(categories, ocomment.Shape)
+        Print #textnumber, sshape & " " & category.name & " " & ocomment.Author & ":" & Chr(&H22) & ocomment.Text & Chr(&H22)
     End If
     Set ocomment = Nothing
 
@@ -167,56 +196,15 @@ ErrorHandler:
     Resume Next
 End Function
 
-' 図形の型を文字列で返す
-Function ShapeType(oshape As Shape) As String
-    Dim stype As String
-    Select Case oshape.Type
-    Case mso3DModel:           stype = "3D モデル"
-    Case msoAutoShape:         stype = "オートシェイプ"
-    Case msoCallout:           stype = "吹き出し"
-    Case msoCanvas:            stype = "キャンバス"
-    Case msoChart:             stype = "グラフ"
-    Case msoComment:           stype = "コメント"
-    Case msoContentApp:        stype = "コンテンツ Office アドイン"
-    Case msoDiagram:           stype = "図"
-    Case msoEmbeddedOLEObject: stype = "埋め込み OLE オブジェクト"
-    Case msoFormControl:       stype = "フォーム コントロール"
-    Case msoFreeform:          stype = "フリーフォーム"
-    Case msoGraphic:           stype = "グラフィック"
-    Case msoGroup:             stype = "Group"
-    'Case msoIgxGraphic:        stype = "SmartArt グラフィック"
-    Case msoInk:               stype = "インク"
-    Case msoInkComment:        stype = "インク コメント"
-    Case msoLine:              stype = "Line"
-    Case msoLinked3DModel:     stype = "リンクされた 3D モデル"
-    Case msoLinkedGraphic:     stype = "リンクされたグラフィック"
-    Case msoLinkedOLEObject:   stype = "リンク OLE オブジェクト"
-    Case msoLinkedPicture:     stype = "リンク画像"
-    Case msoMedia:             stype = "メディア"
-    Case msoOLEControlObject:  stype = "OLE コントロール オブジェクト"
-    Case msoPicture:           stype = "画像"
-    Case msoPlaceholder:       stype = "プレースホルダー"
-    Case msoScriptAnchor:      stype = "スクリプト アンカー"
-    Case msoShapeTypeMixed:    stype = "図形の種類の組み合わせ"
-    Case msoSlicer:            stype = "Slicer"
-    Case msoTable:             stype = "テーブル"
-    Case msoTextBox:           stype = "テキスト ボックス"
-    Case msoTextEffect:        stype = "テキスト効果"
-    Case msoWebVideo:          stype = "Web ビデオ"
-    Case Else:                 stype = "[不明]"
-    End Select
-    ShapeType = stype
-End Function
-
 ' テキスト枠を文字列で返す
 Function TextFrame(vframe As Variant) As String
     TextFrame = ""
-    Dim ncolor As Double
+    Dim ncolor As Long
     Dim fBold As Boolean
     Dim fItalic As Boolean
     Dim fStrikethrough As Boolean
     Dim sUnderline As XlUnderlineStyle
-    ncolor = &H808080
+    ncolor = &H0
     fBold = False
     fItalic = False
     fStrikethrough = False
@@ -224,29 +212,47 @@ Function TextFrame(vframe As Variant) As String
     Dim svalue As String
     Dim nchara As Integer
     For nchara = 1 To Len(vframe.Characters().Text)
+
+        ' 飾りの終了
+        If sUnderline <> vframe.Characters(nchara, 1).Font.Underline Then
+            If sUnderline <> xlUnderlineStyleNone Then svalue = svalue & "</下線>"
+        End If
+        If fStrikethrough <> vframe.Characters(nchara, 1).Font.Strikethrough Then
+            If fStrikethrough Then svalue = svalue & "</取り消し線>"
+        End If
+        If fItalic <> vframe.Characters(nchara, 1).Font.Italic Then
+            If fItalic Then svalue = svalue & "</斜体>"
+        End If
+        If fBold <> vframe.Characters(nchara, 1).Font.Bold Then
+            If fBold Then svalue = svalue & "</太字>"
+        End If
         If ncolor <> vframe.Characters(nchara, 1).Font.Color Then
-            If ncolor <> &H808080 Then svalue = svalue & "</色>"
+            If ncolor <> &H0 Then svalue = svalue & "</色>"
+        End If
+
+        ' 飾りの開始
+        If ncolor <> vframe.Characters(nchara, 1).Font.Color Then
             ncolor = vframe.Characters(nchara, 1).Font.Color
-            svalue = svalue & "<色:0x" & Hex(ncolor) & ">"
+            If ncolor <> &H0 Then svalue = svalue & "<色:0x" & Hex(ncolor) & ">"
         End If
         If fBold <> vframe.Characters(nchara, 1).Font.Bold Then
             fBold = vframe.Characters(nchara, 1).Font.Bold
-            svalue = svalue & IIf(fBold, "<太字>", "</太字>")
+            If fBold Then svalue = svalue & "<太字>"
         End If
         If fItalic <> vframe.Characters(nchara, 1).Font.Italic Then
             fItalic = vframe.Characters(nchara, 1).Font.Italic
-            svalue = svalue & IIf(fItalic, "<斜体>", "</斜体>")
+            If fItalic Then svalue = svalue & "<斜体>"
         End If
         If fStrikethrough <> vframe.Characters(nchara, 1).Font.Strikethrough Then
             fStrikethrough = vframe.Characters(nchara, 1).Font.Strikethrough
-            svalue = svalue & IIf(fStrikethrough, "<取り消し線>", "</取り消し線>")
+            If fStrikethrough Then svalue = svalue & "<取り消し線>"
         End If
         If sUnderline <> vframe.Characters(nchara, 1).Font.Underline Then
             sUnderline = vframe.Characters(nchara, 1).Font.Underline
             Select Case sUnderline
                 Case xlUnderlineStyleDouble:            svalue = svalue & "<太い二重下線>"
                 Case xlUnderlineStyleDoubleAccounting:  svalue = svalue & "<並んだ2本の細い線>"
-                Case xlUnderlineStyleNone:              svalue = svalue & "</下線>"
+                Case xlUnderlineStyleNone:              svalue = svalue & ""
                 Case xlUnderlineStyleSingle:            svalue = svalue & "<一重下線>"
                 Case xlUnderlineStyleSingleAccounting:  svalue = svalue & "<非サポート下線>"
                 Case Else:                              svalue = svalue & "<不明な下線>"
@@ -254,10 +260,12 @@ Function TextFrame(vframe As Variant) As String
         End If
         svalue = svalue & vframe.Characters(nchara, 1).Text
     Next nchara
-    If ncolor <> &H808080                   Then svalue = svalue & "</色>" 
-    If fBold <> False                       Then svalue = svalue & "</太字>"
-    If fItalic <> False                     Then svalue = svalue & "</斜体>"
-    If fStrikethrough <> False              Then svalue = svalue & "</取り消し線>"
+
+    ' 飾りの終了
     If sUnderline <> xlUnderlineStyleNone   Then svalue = svalue & "</下線>"
+    If fStrikethrough                       Then svalue = svalue & "</取り消し線>"
+    If fItalic                              Then svalue = svalue & "</斜体>"
+    If fBold                                Then svalue = svalue & "</太字>"
+    If ncolor <> &H0                        Then svalue = svalue & "</色>" 
     TextFrame = svalue
 End Function
